Added CheckDB Handlers, Check Adapter, CreateCheckActivity

--- a/app/src/main/res/layout/fragment_check_list.xml
+++ b/app/src/main/res/layout/fragment_check_list.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_check_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_check_fab"
