--- a/app/src/main/res/layout/check_item.xml
+++ b/app/src/main/res/layout/check_item.xml
@@ -4,21 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:padding="6dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_check_item"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
+        android:scrollbarStyle="outsideOverlay"
         app:cardCornerRadius="2dp"
         app:cardElevation="6dp"
-        app:cardBackgroundColor="?attr/colorPrimary">
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="6dp">
 
             <TextView
                 android:id="@+id/title_check_item"
