--- a/app/src/main/res/layout/check_item_item.xml
+++ b/app/src/main/res/layout/check_item_item.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="80dp">
 
         <TextView
             android:id="@+id/text_view_item_name"
