--- a/app/src/main/res/layout/fragment_edit_check_items.xml
+++ b/app/src/main/res/layout/fragment_edit_check_items.xml
@@ -5,4 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_edit_check_items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!--Add Item Here-->
+    <ImageView
+        android:id="@+id/image_view_edit_check_add_item"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/ic_add_circle_outline_black_36dp" />
+
 </LinearLayout>
