--- a/app/src/main/res/layout/fragment_check_list.xml
+++ b/app/src/main/res/layout/fragment_check_list.xml
@@ -8,8 +8,8 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:elevation="4dp">
+        android:layout_height="@dimen/app_bar_layout_height"
+        app:elevation="@dimen/app_bar_layout_elevation">
 
     </android.support.design.widget.AppBarLayout>
 
