--- a/app/src/main/res/layout/check_item.xml
+++ b/app/src/main/res/layout/check_item.xml
@@ -22,12 +22,22 @@
             android:layout_height="match_parent"
             android:padding="6dp">
 
-            <TextView
-                android:id="@+id/title_check_item"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/default_check_item_name"
-                android:textSize="30sp"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/title_check_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/default_check_item_name"
+                    android:textSize="30sp"/>
+                <ImageView
+                    android:id="@+id/options_icon_check_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_more_vert_white_24dp"
+                    android:layout_gravity="center_vertical|end"/>
+            </FrameLayout>
             <TextView
                 android:id="@+id/date_time_check_item"
                 android:layout_width="match_parent"
