--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,9 +11,13 @@
     <dimen name="app_bar_layout_height">0dp</dimen>
     <dimen name="app_bar_layout_elevation">4dp</dimen>
 
-    <!--Dimensions for activity_edit_check.xml-->
+    <!--Dimensions for activity_check_detailil.xml-->
     <dimen name="edit_check_total_frame_height">50dp</dimen>
     <dimen name="edit_check_total_frame_elevation">4dp</dimen>
     <dimen name="edit_check_padding">8dp</dimen>
+
+    <!--Dimensions for Dialogs-->
+    <dimen name="dialog_padding">10dp</dimen>
+
 
 </resources>
